--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 <div class="picture" id="hjem">
   <div class="picture__container">
     <h1 class="picture__heading">Alice Restaurant</h1>
-    <button class="hoved__btn"><a href="#">Book bord</a></button>
+    <button class="hoved__btn"><a href="reservation.html">Book bord</a></button>  
   </div>
 </div>
 
